# epicchain-cpp-sdk

./: CERTIFICATION_COMPLETE.md  CMakeLists.txt  CONVERSION_COMPLETE.md  CONVERSION_REPORT.md  CONVERSION_STATUS.md  FINAL_CONVERSION_SUMMARY.md  PRODUCTION_CERTIFICATION_FINAL.md  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_FINAL.md  README.md  SWIFT_CPP_CONSISTENCY_REPORT.md  SWIFT_TEST_CONVERSION_STATUS.md  SWIFT_TO_CPP_CONVERSION_FINAL_REPORT.md  TESTING.md  TEST_COVERAGE_REPORT.md  TEST_FIXES_SUMMARY.md  compare_files.py  comprehensive_test.cpp  comprehensive_validation.cpp  find_missing.py  simple_test.cpp  simple_validation.cpp  test_production.cpp  test_sdk.cpp  validate_conversion.sh  validate_neocpp.cpp
build_test/: Makefile
cmake/: EpicChainCppConfig.cmake.in
examples/: CMakeLists.txt  crypto_example.cpp  transaction_example.cpp  wallet_example.cpp
include/epicchaincpp/: epicchain_constants.hpp
include/neocpp/: epicchain_swift_error.hpp  epicchaincpp.hpp  exceptions.hpp  logger.hpp
src/: epicchain_constants.cpp  logger.cpp
src/contract/: contract_management.cpp  epicchain_name_service.cpp  epicchain_token.cpp  epicchain_uri.cpp  epicpulse_token.cpp  fungible_token.cpp  iterator.cpp  non_fungible_token.cpp  policy_contract.cpp  role_management.cpp  smart_contract.cpp  token.cpp  xef_file.cpp  xns_name.cpp
src/crypto/: bip32_ec_key_pair.cpp  bip39.cpp  ec_key_pair.cpp  ec_point.cpp  ecdsa_signature.cpp  (+5 more)
tests/: CMakeLists.txt  main.cpp  test_hash.cpp  test_main.cpp  test_transaction.cpp  test_types.cpp  test_wallet.cpp
(+258 files in other folders)
